complete main structure

--- a/index.html
+++ b/index.html
@@ -1,23 +1,258 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Shi Caiqiang</title>
-    <link rel="stylesheet" href="main.css" media="screen" title="no title" charset="utf-8">
-  </head>
-  <body>
-    <div class="header">
-        <div class="avator">
+
+<head>
+  <meta charset="utf-8">
+  <title>Shi Caiqiang</title>
+  <link rel="stylesheet" href="main.css" media="screen" title="no title" charset="utf-8">
+</head>
+
+<body>
+  <div class="header">
+    <div class="avator">
+    </div>
+    <h1>Hi, I am Shi Caiqiang</h1>
+
+  </div>
+
+  <div>
+    <ul id="menu">
+      <li><a href="#">WORK</a></li>
+      <li><a href="#">EXPERIENCE</a></li>
+      <li><a href="#">PHOTOS</a></li>
+      <li><a href="#">CONCACT</a></li>
+    </ul>
+  </div>
+
+  <div class="detail">
+
+    <div class="what-i-do">
+        <div class="title">
+          WHAT I DO
+                  <div class="underline"></div>
         </div>
-        <h1>Hi, I am Shi Caiqiang</h1>
+        <div class="introduce text-css">
+          I'm Shi Caiqiang. I design and develop things on the web.Now I am in xupt.
+        </div>
+
+        <ul id="items">
+          <li>
+            <img src="code.png" alt="" />
+            <div class="item-name">
+              CODE
+            </div>
+            <div class="item-description text-css">
+              I like building things on the web. I've built games, tools, and web apps.
+            </div>
+          </li>
+          <li>
+            <img src="design.png" alt="" />
+            <div class="item-name">
+              DESIGN
+            </div>
+            <div class="item-description text-css">
+              I like building things on the web. I've built games, tools, and web apps.
+            </div>
+          </li>
+          <li>
+            <img src="project.png" alt="" />
+            <div class="item-name">
+              PROJECT
+            </div>
+            <div class="item-description text-css">
+              I like building things on the web. I've built games, tools, and web apps.
+            </div>
+          </li>
+        </ul>
+    </div>
+
+    <div class="spearator-line"></div>
+
+    <div class="education">
+      <div class="title">
+          EDUCATION & EXPERIENCES
+            <div class="underline"></div>
+      </div>
+
+      <ul class="experience-content">
+        <li name="item">
+        <div >
+            <img src="stri.png" alt="" />
+            <div class="content">
+                <div class="title">
+                  Strikingly
+                </div>
+                <div class="time">
+                  Cofounder, 2012 - Present
+                </div>
+                <p class="description text-css">
+                  Strikingly is a website builder that's simple, beautiful, and fun. And perfect for the age of mobile. I'm in charge of UI/UX and front-end.
+                  <br>
+                  <br>
+                  Y Combinator Winter '13
+                </p>
+            </div>
+        </div>
+        </li>
+
+        <li name="item">
+          <div>
+            <img src="rocket.jpg" alt="" />
+            <div class="content">
+                <div class="title item-name">
+                  Freelance Web/Game Developer
+                </div>
+                <div class="time">
+                  2007 - 2012
+                </div>
+                <div class="description text-css">
+                  EchoRocket was my one-man Flash game studio and web development/design consultancy. I built Spinblaster, Block Knocker, CampusAmp, HireBrite, and more!
+                </div>
+            </div>
+
+          </div>
+        </li>
+
+        <li name="item">
+          <div>
+        <img src="university.jpg" alt="" />
+        <div class="content">
+            <div class="title item-name">
+            University of Chicago
+            </div>
+            <div class="time">
+              BA Economics, 2008-2012
+            </div>
+            <div class="description text-css">
+              Studying the finer points of firms, markets, finance, decision theory, and supply and demand.
+              <br>
+              <br>
+              Activities: Chicago Careers in Business, Student Government, Phi Beta Kappa
+            </div>
+        </div>
+          </div>
+        </li>
+
+      </div>
+
+
+
+    <div class="spearator-line"></div>
+
+    <div class="photos">
+      <div class="title">
+        PHOTOS
+          <div class="underline"></div>
+      </div>
+
+      <div class="introduce text-css">
+        Some beautify photos;
+      </div>
+
+      <div class="photo-galary">
+        <div class="img-line">
+          <img src="img1.jpg" alt="" />
+          <img src="img2.jpg" alt="" />
+          <img src="img3.jpg" alt="" />
+          <img src="img4.jpg" alt="" />
+        </div>
+
+        <div class="img-line">
+          <img src="img5.jpg" alt="" />
+          <img src="img6.jpg" alt="" />
+          <img src="img7.jpg" alt="" />
+          <img src="img8.jpg" alt="" />
+        </div>
+      </div>
 
     </div>
 
-      <ul id="menu">
-      <li><a href="#">One</a></li>
-      <li><a href="#">Two</a></li>
-      <li><a href="#">Three</a></li>
-      <li><a href="#">Four</a></li>
-    </ul>
-  </body>
+    <div class="spearator-line"></div>
+
+    <div class="get-in-touch">
+      <div class="title">
+        GET IN TOUCH
+      <div class="underline"></div>
+
+      <div class="contact-ways">
+        <ul class="contact-way">
+            <li>
+              <img src="fb.png" alt="" />
+                <div class="text-css">
+                  Facebook
+                </div>
+            </li>
+
+            <li>
+              <img src="linkedin.png" alt="" />
+              <div class="text-css">
+                LinkedIn
+              </div>
+            </li>
+
+            <li>
+              <img src="twitter.png" alt="" />
+              <div class="text-css">
+                Twitter
+              </div>
+            </li>
+
+            <li>
+              <img src="email.png" alt="" />
+              <div class="text-css">
+                Email
+                </div>
+            </li>
+        </ul>
+      </div>
+
+
+      </div>
+
+    </div>
+
+
+    <div class="spearator-line"></div>
+
+    <div class="leave-message">
+
+      <div class="title">
+       OR... LEAVE A MESSAGE
+         <div class="underline"></div>
+      </div>
+
+      <div class="guest-form text-css">
+
+        <div class="name-area">
+          <label for="username">Name</label>
+          <input type="text" name="username">
+        </div>
+
+        <div class="email-area">
+          <label for="email">Email</label>
+          <input type="text" name="email">
+        </div>
+
+        <div class="message-area">
+          <label for="message" name="message">Message</label>
+          <textarea name="message" rows="4"  ></textarea>
+        </div>
+
+        <div class="submit">
+          <input type="button" name="submit" value="Submit">
+        </div>
+      </div>
+
+    </div>
+
+
+
+  </div>
+
+
+</div>
+</body>
+
 </html>
+
+<!--
