add jump menu function

--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
 
   <div>
     <ul id="menu">
-      <li><a href="#">WORK</a></li>
-      <li><a href="#">EXPERIENCE</a></li>
-      <li><a href="#">PHOTOS</a></li>
-      <li><a href="#">CONCACT</a></li>
+      <li><a href="#work">WORK</a></li>
+      <li><a href="#experience">EXPERIENCE</a></li>
+      <li><a href="#photos">PHOTOS</a></li>
+      <li><a href="#contact">CONCACT</a></li>
     </ul>
   </div>
 
   <div class="detail">
 
-    <div class="what-i-do">
+    <div class="what-i-do" id="work">
         <div class="title">
           WHAT I DO
                   <div class="underline"></div>
@@ -68,7 +68,7 @@
 
     <div class="spearator-line"></div>
 
-    <div class="education">
+    <div class="education" id="experience">
       <div class="title">
           EDUCATION & EXPERIENCES
             <div class="underline"></div>
@@ -139,7 +139,7 @@
 
     <div class="spearator-line"></div>
 
-    <div class="photos">
+    <div class="photos" id="photos">
       <div class="title">
         PHOTOS
           <div class="underline"></div>
@@ -169,7 +169,7 @@
 
     <div class="spearator-line"></div>
 
-    <div class="get-in-touch">
+    <div class="get-in-touch" id="contact">
       <div class="title">
         GET IN TOUCH
       <div class="underline"></div>
