beautify the form

--- a/index.html
+++ b/index.html
@@ -27,87 +27,86 @@
   <div class="detail">
 
     <div class="what-i-do" id="work">
-        <div class="title">
-          WHAT I DO
-                  <div class="underline"></div>
-        </div>
-        <div class="introduce text-css">
-          I'm Shi Caiqiang. I design and develop things on the web.Now I am in xupt.
-        </div>
+      <div class="title">
+        WHAT I DO
+        <div class="underline"></div>
+      </div>
+      <div class="introduce text-css">
+        I'm Shi Caiqiang. I design and develop things on the web.Now I am in xupt.
+      </div>
 
-        <ul id="items">
-          <li>
-            <img src="code.png" alt="" />
-            <div class="item-name">
-              CODE
-            </div>
-            <div class="item-description text-css">
-              I like building things on the web. I've built games, tools, and web apps.
-            </div>
-          </li>
-          <li>
-            <img src="design.png" alt="" />
-            <div class="item-name">
-              DESIGN
-            </div>
-            <div class="item-description text-css">
-              I like building things on the web. I've built games, tools, and web apps.
-            </div>
-          </li>
-          <li>
-            <img src="project.png" alt="" />
-            <div class="item-name">
-              PROJECT
-            </div>
-            <div class="item-description text-css">
-              I like building things on the web. I've built games, tools, and web apps.
-            </div>
-          </li>
-        </ul>
+      <ul id="items">
+        <li>
+          <img src="code.png" alt="" />
+          <div class="item-name">
+            CODE
+          </div>
+          <div class="item-description text-css">
+            I like building things on the web. I've built games, tools, and web apps.
+          </div>
+        </li>
+        <li>
+          <img src="design.png" alt="" />
+          <div class="item-name">
+            DESIGN
+          </div>
+          <div class="item-description text-css">
+            I like building things on the web. I've built games, tools, and web apps.
+          </div>
+        </li>
+        <li>
+          <img src="project.png" alt="" />
+          <div class="item-name">
+            PROJECT
+          </div>
+          <div class="item-description text-css">
+            I like building things on the web. I've built games, tools, and web apps.
+          </div>
+        </li>
+      </ul>
     </div>
 
     <div class="spearator-line"></div>
 
     <div class="education" id="experience">
       <div class="title">
-          EDUCATION & EXPERIENCES
-            <div class="underline"></div>
+        EDUCATION & EXPERIENCES
+        <div class="underline"></div>
       </div>
 
       <ul class="experience-content">
         <li name="item">
-        <div >
+          <div>
             <img src="stri.png" alt="" />
             <div class="content">
-                <div class="title">
-                  Strikingly
-                </div>
-                <div class="time">
-                  Cofounder, 2012 - Present
-                </div>
-                <p class="description text-css">
-                  Strikingly is a website builder that's simple, beautiful, and fun. And perfect for the age of mobile. I'm in charge of UI/UX and front-end.
-                  <br>
-                  <br>
-                  Y Combinator Winter '13
-                </p>
+              <div class="title">
+                Strikingly
+              </div>
+              <div class="time">
+                Cofounder, 2012 - Present
+              </div>
+              <p class="description text-css">
+                Strikingly is a website builder that's simple, beautiful, and fun. And perfect for the age of mobile. I'm in charge of UI/UX and front-end.
+                <br>
+                <br> Y Combinator Winter '13
+              </p>
             </div>
-        </div>
+          </div>
         </li>
 
         <li name="item">
           <div>
             <img src="rocket.jpg" alt="" />
             <div class="content">
-                <div class="title item-name">
-                  Freelance Web/Game Developer
-                </div>
-                <div class="time">
-                  2007 - 2012
-                </div>
-                <div class="description text-css">
-                  EchoRocket was my one-man Flash game studio and web development/design consultancy. I built Spinblaster, Block Knocker, CampusAmp, HireBrite, and more!
-                </div>
+              <div class="title item-name">
+                Freelance Web/Game Developer
+              </div>
+              <div class="time">
+                2007 - 2012
+              </div>
+              <div class="description text-css">
+                EchoRocket was my one-man Flash game studio and web development/design consultancy. I built Spinblaster, Block Knocker, CampusAmp, HireBrite, and more!
+              </div>
             </div>
 
           </div>
@@ -115,25 +114,24 @@
 
         <li name="item">
           <div>
-        <img src="university.jpg" alt="" />
-        <div class="content">
-            <div class="title item-name">
-            University of Chicago
+            <img src="university.jpg" alt="" />
+            <div class="content">
+              <div class="title item-name">
+                University of Chicago
+              </div>
+              <div class="time">
+                BA Economics, 2008-2012
+              </div>
+              <div class="description text-css">
+                Studying the finer points of firms, markets, finance, decision theory, and supply and demand.
+                <br>
+                <br> Activities: Chicago Careers in Business, Student Government, Phi Beta Kappa
+              </div>
             </div>
-            <div class="time">
-              BA Economics, 2008-2012
-            </div>
-            <div class="description text-css">
-              Studying the finer points of firms, markets, finance, decision theory, and supply and demand.
-              <br>
-              <br>
-              Activities: Chicago Careers in Business, Student Government, Phi Beta Kappa
-            </div>
-        </div>
           </div>
         </li>
 
-      </div>
+    </div>
 
 
 
@@ -142,7 +140,7 @@
     <div class="photos" id="photos">
       <div class="title">
         PHOTOS
-          <div class="underline"></div>
+        <div class="underline"></div>
       </div>
 
       <div class="introduce text-css">
@@ -172,15 +170,15 @@
     <div class="get-in-touch" id="contact">
       <div class="title">
         GET IN TOUCH
-      <div class="underline"></div>
+        <div class="underline"></div>
 
-      <div class="contact-ways">
-        <ul class="contact-way">
+        <div class="contact-ways">
+          <ul class="contact-way">
             <li>
               <img src="fb.png" alt="" />
-                <div class="text-css">
-                  Facebook
-                </div>
+              <div class="text-css">
+                Facebook
+              </div>
             </li>
 
             <li>
@@ -201,10 +199,10 @@
               <img src="email.png" alt="" />
               <div class="text-css">
                 Email
-                </div>
+              </div>
             </li>
-        </ul>
-      </div>
+          </ul>
+        </div>
 
 
       </div>
@@ -217,30 +215,48 @@
     <div class="leave-message">
 
       <div class="title">
-       OR... LEAVE A MESSAGE
-         <div class="underline"></div>
+        OR... LEAVE A MESSAGE
+        <div class="underline"></div>
       </div>
 
-      <div class="guest-form text-css">
+      <ul class="guest-form text-css">
+        <li>
+          <div class="input-formation">
+            <div class="input-label">
+              <label for="name">Name</label>
+            </div>
 
-        <div class="name-area">
-          <label for="username">Name</label>
-          <input type="text" name="username">
-        </div>
+            <div class="input-text">
+              <input type="text" name="name" value="">
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="input-formation">
+            <div class="input-label">
+              <label for="email">Email</label>
+            </div>
 
-        <div class="email-area">
-          <label for="email">Email</label>
-          <input type="text" name="email">
-        </div>
+            <div class="input-text">
+              <input type="text" name="email" value="">
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="input-formation">
+            <div class="input-label">
+              <label for="message">Message</label>
+            </div>
 
-        <div class="message-area">
-          <label for="message" name="message">Message</label>
-          <textarea name="message" rows="4"  ></textarea>
-        </div>
+            <div class="input-text">
+              <textarea name="messsage" rows="7" cols="20"></textarea>
+            </div>
+          </div>
+        </li>
+      </ul>
 
-        <div class="submit">
-          <input type="button" name="submit" value="Submit">
-        </div>
+      <div class="submit-button">
+        <button class="text-css" type="button" name="button">Submit</button>
       </div>
 
     </div>
@@ -250,7 +266,7 @@
   </div>
 
 
-</div>
+  </div>
 </body>
 
 </html>
