--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <li><a href="#work">WORK</a></li>
       <li><a href="#experience">EXPERIENCE</a></li>
       <li><a href="#photos">PHOTOS</a></li>
-      <li><a href="#contact">CONCACT</a></li>
+      <li><a href="#contact">CONTACT</a></li>
     </ul>
   </div>
 
