--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
       <ul id="items">
         <li>
-          <img src="code.png" alt="" />
+          <img src="img/code.png" alt="" />
           <div class="item-name">
             CODE
           </div>
@@ -46,7 +46,7 @@
           </div>
         </li>
         <li>
-          <img src="design.png" alt="" />
+          <img src="img/design.png" alt="" />
           <div class="item-name">
             DESIGN
           </div>
@@ -55,7 +55,7 @@
           </div>
         </li>
         <li>
-          <img src="project.png" alt="" />
+          <img src="img/project.png" alt="" />
           <div class="item-name">
             PROJECT
           </div>
@@ -77,7 +77,7 @@
       <ul class="experience-content">
         <li name="item">
           <div>
-            <img src="stri.png" alt="" />
+            <img src="img/stri.png" alt="" />
             <div class="content">
               <div class="title">
                 Strikingly
@@ -96,7 +96,7 @@
 
         <li name="item">
           <div>
-            <img src="rocket.jpg" alt="" />
+            <img src="img/rocket.jpg" alt="" />
             <div class="content">
               <div class="title item-name">
                 Freelance Web/Game Developer
@@ -114,7 +114,7 @@
 
         <li name="item">
           <div>
-            <img src="university.jpg" alt="" />
+            <img src="img/university.jpg" alt="" />
             <div class="content">
               <div class="title item-name">
                 University of Chicago
@@ -149,17 +149,17 @@
 
       <div class="photo-galary">
         <div class="img-line">
-          <img src="img1.jpg" alt="" />
-          <img src="img2.jpg" alt="" />
-          <img src="img3.jpg" alt="" />
-          <img src="img4.jpg" alt="" />
+          <img src="img/img1.jpg" alt="" />
+          <img src="img/img2.jpg" alt="" />
+          <img src="img/img3.jpg" alt="" />
+          <img src="img/img4.jpg" alt="" />
         </div>
 
         <div class="img-line">
-          <img src="img5.jpg" alt="" />
-          <img src="img6.jpg" alt="" />
-          <img src="img7.jpg" alt="" />
-          <img src="img8.jpg" alt="" />
+          <img src="img/img5.jpg" alt="" />
+          <img src="img/img6.jpg" alt="" />
+          <img src="img/img7.jpg" alt="" />
+          <img src="img/img8.jpg" alt="" />
         </div>
       </div>
 
@@ -175,28 +175,28 @@
         <div class="contact-ways">
           <ul class="contact-way">
             <li>
-              <img src="fb.png" alt="" />
+              <img src="img/fb.png" alt="" />
               <div class="text-css">
                 Facebook
               </div>
             </li>
 
             <li>
-              <img src="linkedin.png" alt="" />
+              <img src="img/linkedin.png" alt="" />
               <div class="text-css">
                 LinkedIn
               </div>
             </li>
 
             <li>
-              <img src="twitter.png" alt="" />
+              <img src="img/twitter.png" alt="" />
               <div class="text-css">
                 Twitter
               </div>
             </li>
 
             <li>
-              <img src="email.png" alt="" />
+              <img src="img/email.png" alt="" />
               <div class="text-css">
                 Email
               </div>
